Cartesian product test for scoping and fixes
Signed-off-by: Kexin Rong <krong@vmware.com>